--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,11 @@ services:
     ports:
       - "${APP_PORT:-9033}:80"
     environment:
-      APP_NAME: DB Backuper
-      APP_ENV: production
-      APP_KEY: base64:tgq5MBqp81M1PFEjDx0BhK79iNG9FfIsg4dk43YMrS8=
-      APP_PORT: 9033
+      APP_NAME: ${APP_NAME:-"DB Backuper"}
+      APP_ENV: ${APP_ENV:-local}
+      APP_DEBUG: ${APP_DEBUG:-true}
+      APP_KEY: ${APP_KEY}
+      APP_PORT: ${APP_PORT:-9033}
       DB_CONNECTION: sqlite
       DB_DATABASE: /var/www/html/database/database.sqlite
     volumes:
