--- a/.deploy/supervisord.conf
+++ b/.deploy/supervisord.conf
@@ -1,23 +1,55 @@
 [supervisord]
 nodaemon=true
 user=root
+logfile=/var/log/supervisor/supervisord.log
+pidfile=/var/run/supervisord.pid
 
 [program:caddy]
 command=/usr/sbin/caddy run --config /etc/caddy/Caddyfile
 user=root
 autorestart=true
+startretries=3
+stdout_logfile=/var/log/supervisor/caddy.log
+stderr_logfile=/var/log/supervisor/caddy.error.log
+stdout_logfile_maxbytes=10MB
+stderr_logfile_maxbytes=10MB
 
 [program:php-fpm]
 command=/usr/local/sbin/php-fpm
 user=root
 autorestart=true
+startretries=3
+stdout_logfile=/var/log/supervisor/php-fpm.log
+stderr_logfile=/var/log/supervisor/php-fpm.error.log
+stdout_logfile_maxbytes=10MB
+stderr_logfile_maxbytes=10MB
 
 [program:queue]
-command=/usr/local/bin/php /var/www/html/artisan queue:work --sleep=3 --tries=3
-user=root
+command=/usr/local/bin/php /var/www/html/artisan queue:work database --sleep=3 --tries=3 --max-time=3600 --timeout=60
+directory=/var/www/html
+user=www-data
 autorestart=true
+startretries=3
+stopwaitsecs=3600
+stdout_logfile=/var/log/supervisor/queue.log
+stderr_logfile=/var/log/supervisor/queue.error.log
+stdout_logfile_maxbytes=50MB
+stderr_logfile_maxbytes=50MB
+stdout_logfile_backups=5
+stderr_logfile_backups=5
+environment=APP_ENV="production"
 
-[program:cron]
-command=/usr/sbin/crond -f
-user=root
+[program:schedule]
+command=/usr/local/bin/php /var/www/html/artisan schedule:work --verbose
+directory=/var/www/html
+user=www-data
 autorestart=true
+startretries=3
+stopwaitsecs=60
+stdout_logfile=/var/log/supervisor/schedule.log
+stderr_logfile=/var/log/supervisor/schedule.error.log
+stdout_logfile_maxbytes=50MB
+stderr_logfile_maxbytes=50MB
+stdout_logfile_backups=5
+stderr_logfile_backups=5
+environment=APP_ENV="production"
