--- a/.deploy/development/supervisord.conf
+++ b/.deploy/development/supervisord.conf
@@ -25,7 +25,7 @@ stdout_logfile_maxbytes=10MB
 stderr_logfile_maxbytes=10MB
 
 [program:queue]
-command=/usr/local/bin/php /var/www/html/artisan queue:work database --sleep=3 --tries=3 --max-time=3600 --timeout=60
+command=/usr/local/bin/php /var/www/html/artisan queue:work database --sleep=3 --tries=3 --max-time=3600 --timeout=300 --max-jobs=1000
 directory=/var/www/html
 user=www-data
 autorestart=true
