--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "filament/filament": "^4.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "resma/filament-awin-theme": "^1.1"
+        "resma/filament-awin-theme": "^1.1",
+        "spatie/db-dumper": "^3.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
