--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "filament/filament": "^4.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "resma/filament-awin-theme": "^1.1",
         "spatie/db-dumper": "^3.8"
     },
